[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game/player/kinematic-player.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3969
height = 1.19106

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.0983991, 1.02507, 1 )

[node name="kinematic-player" type="KinematicBody"]
collision_layer = 2
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 1, 0 )
shape = SubResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
light_energy = 2.0
omni_range = 40.0

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="FPSCamera" type="Camera" parent="RotationHelper"]
transform = Transform( -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 0, 0, 1, 0, 0, 0 )
environment = ExtResource( 2 )

[node name="feet" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="feet"]
shape = SubResource( 2 )
[connection signal="body_entered" from="feet" to="." method="_on_feet_body_entered"]
[connection signal="body_shape_entered" from="feet" to="." method="_on_feet_body_shape_entered"]
